# llama-sandbox

./: .gitignore  CLAUDE.md  README.md
kv-transfer/: CMakeLists.txt  README.md  TECHNICAL.md  compare-methods.sh  plot_decay.py  plot_models.py  plot_results.py  run-gemma4-26b-a4b.sh  run-gemma4-31b.sh  run-gemma4-e2b.sh  run-gemma4-e4b.sh  run-qwen3.5-27b.sh  run-qwen3.5-2b.sh  run-qwen3.5-35b-a3b.sh  run-qwen3.5-397b.sh  run.sh
kv-transfer/prompts/: 01_python_small.txt  02_rust_small.txt  03_go_bug.txt  04_cpp_small.txt  05_js_small.txt  06_python2_small.txt  07_c_small.txt  08_java_explain.txt  09_python_large.txt  10_go_large.txt  11_typescript_medium.txt  12_rust_medium.txt  13_python_xlarge.txt  14_go_large.txt  15_cpp_medium.txt  16_java_medium.txt  17_rust_large.txt  18_typescript_large.txt  19_cpp_large.txt
kv-transfer/results/: decay-by-size.html  decay-compare.html  decay.html  view.html
kv-transfer/results/gemma4-26b-a4b-bf16/: 01_python_small-ref.txt  02_rust_small-ref.txt  03_go_small-ref.txt  04_cpp_small-ref.txt  05_js_small-ref.txt  06_python2_small-ref.txt  07_c_small-ref.txt  08_java_small-ref.txt  09_python_medium-ref.txt  10_go_medium-ref.txt  11_typescript_medium-ref.txt  12_rust_medium-ref.txt  13_python_large-ref.txt  14_go_large-ref.txt  15_cpp_medium-ref.txt  16_java_medium-ref.txt  17_rust_large-ref.txt  18_typescript_large-ref.txt  19_cpp_large-ref.txt  decay.csv  summary.csv
kv-transfer/results/gemma4-26b-a4b-ud-q8_k_xl/: 01_python_small-ref.txt  02_rust_small-ref.txt  03_go_small-ref.txt  04_cpp_small-ref.txt  (+17 more)
kv-transfer/src/: batch.cpp  batch.h  compare.cpp  compare.h  decay.cpp  decay.h  handoff.cpp  handoff.h  kl_utils.h  main.cpp  ref.cpp  stats_io.cpp  stats_io.h  target.cpp  target.h  trace_io.cpp  trace_io.h
quant-sampling/: CMakeLists.txt  README.md  collect_batch.sh  compare_batch.sh  generate_batch.sh  prompts.txt  ref_batch.sh  study.sh  target_batch.sh
quant-sampling/prompts/: 01.txt  07.txt
quant-sampling/results/: qwen3.5-122b-a10b-iq1_m.csv  qwen3.5-122b-a10b-iq2_m.csv  qwen3.5-122b-a10b-iq2_xss.csv  qwen3.5-122b-a10b-iq3_s.csv  qwen3.5-122b-a10b-ud-iq4_xs.csv  qwen3.5-122b-a10b-ud-q4_k_xl.csv  qwen3.5-122b-a10b-ud-q5_k_xl.csv  qwen3.5-122b-a10b-ud-q6_k_xl.csv  qwen3.5-122b-a10b-ud-q8_k_xl.csv  shape.html  view.html
quant-sampling/src/: collect.cpp  collect.h  compare.cpp  compare_batch.cpp  compare_batch.h  diff.cpp  diff.h  generate.cpp  generate.h  kl_utils.h  logits_io.cpp  logits_io.h  main.cpp  ref.cpp  ref.h  target.cpp
(+432 files in other folders)
